--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   firebase_auth: ^4.6.1
   cloud_firestore: ^4.7.1
   modal_progress_hud_nsn: ^0.4.0
+  shared_preferences: ^2.1.2
   fluttertoast: ^8.2.2
 
 dev_dependencies:
