--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,8 @@ dependencies:
   modal_progress_hud_nsn: ^0.4.0
   shared_preferences: ^2.1.2
   fluttertoast: ^8.2.2
-
+  firebase_messaging: ^14.6.4
+  flutter_local_notifications: ^14.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
