--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   fluttertoast: ^8.2.2
   firebase_messaging: ^14.6.4
   flutter_local_notifications: ^14.1.1
+  rxdart: ^0.27.7
 dev_dependencies:
   flutter_test:
     sdk: flutter
